feature: adding label route
